--- a/views/singleUser.pug
+++ b/views/singleUser.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Data for user #{resource}
+  h1 Events by user #{resource}
   ul
     each val in data
       li
