--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,12 @@ html(lang='en')
   body
     .container
       h1 Talky Dashboard
+      div
+        input(type='text' data-text='room-search-input' placeholder='Room Id')
+        button(data-text='room-search-button') Submit
+      div
+        input(type='text' data-text='user-search-input' placeholder='User Id')
+        button(data-text='user-search-button') Submit
       block content
       block footer
   script(src='/js/main.js')
