Add room counts for last 24hrs and 30days

--- a/views/listOfRooms.pug
+++ b/views/listOfRooms.pug
@@ -9,6 +9,12 @@ block dashboardContent
       tr
         th Active Users
         td #{activeUserCount}
+      tr
+        th Rooms in last 24h
+        td #{prevDayRoomCount}
+      tr
+        th Rooms in last 30 days
+        td #{prevMonthRoomCount}
 
   section
     h1 Recent rooms
