Fix active session count in dashboard

--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -8,7 +8,7 @@ block dashboardContent
         td #{activeRoomCount}
       tr
         th Active Users
-        td #{activeUserCount}
+        td #{activeSessionCount}
       tr
         th Rooms in last 24h
         td #{prevDayRoomCount}
