--- a/views/home.pug
+++ b/views/home.pug
@@ -39,7 +39,7 @@ block content
             if screensharingExtensions.chrome
               a(href='https://chrome.google.com/webstore/detail/' + screensharingExtensions.chrome) #{screensharingExtensions.chrome}
             else
-              Not configured
+              span Not configured
         if screensharingExtensions.firefox
           tr
             th Firefox (Obsolete)
