Put docs behind auth, add link to them.

--- a/views/layout_admin.pug
+++ b/views/layout_admin.pug
@@ -20,6 +20,8 @@ html(lang='en')
             li
               a(href='/license') License
             li
+              a(href='/documentation') API Docs
+            li
               a(href='/dashboard') Monitoring Dashboard
       .page-core
         block content
