--- a/views/home.pug
+++ b/views/home.pug
@@ -24,11 +24,17 @@ block content
           th Rooms
           td #{domains.rooms}
         tr
+          th Queue
+          td
+            | Events: #{eventQueue}
+            br
+            | Room Reports: #{roomReportQueue}
+        tr
           th ICE
           td
             a(href=iceServer) #{iceServer.replace(/https?:\/\//, '').replace(/:[0-9]+/, '')}
 
-    h4 Browser Screensharing Extensions 
+    h4 Browser Screensharing Extensions
     table
       tbody
         tr
