move queue sizes to admin dashboard

--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -20,6 +20,16 @@ block dashboardContent
           td #{activeSessionCount}
           td #{prevDaySessionCount}
           td #{prevWeekSessionCount}
+    table
+      thead
+        tr
+          th Queue Sizes
+      tbody
+        tr
+          td
+            | Events: #{eventQueue}
+            br
+            | Room Reports: #{roomReportQueue}
 
   section
     h1 Recent rooms
