Add inital talk-time report

--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -34,7 +34,7 @@ block dashboardContent
         tr
           td Room Reports
           td #{roomReportQueue}
-          td #{eventClock}
+          td #{roomReportClock}
 
   section
     h1 Recent rooms
