Add occupants report, simplify room page renderer

--- a/views/layout_dashboard.pug
+++ b/views/layout_dashboard.pug
@@ -9,4 +9,5 @@ block content
       input(type='text' data-text='user-search-input' placeholder='User Id')
       button(data-text='user-search-button') Submit
   block dashboardContent
+  footer.footer-primary
   // script(src='/js/main.js')
