Add creation time to room summary

--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -42,11 +42,13 @@ block dashboardContent
       thead
         tr
           th Name
+          th Created
           th Duration
       each val in data
         tr
           td
             a(href='/dashboard/rooms/' + val.id) #{val.name}
+          td #{val.created_at}
           td #{val.duration}
     div
       h3 Pages
