Display org id in reports

--- a/views/single_session.pug
+++ b/views/single_session.pug
@@ -10,6 +10,9 @@ block dashboardContent
       th User ID
       td #{session.user_id}
     tr
+      th Organization
+      td #{session.org_id}
+    tr
       th Client Type
       td #{session.type}
     tr
