Include mobile/desktop session counts

--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -21,10 +21,20 @@ block dashboardContent
           td #{prevDayUniqueRoomCount}
           td #{prevWeekUniqueRoomCount}
         tr
-          td Sessions
+          td Sessions (Total)
           td #{activeSessionCount}
           td #{prevDaySessionCount}
           td #{prevWeekSessionCount}
+        tr
+          td Sessions (Mobile)
+          td #{activeMobileSessionCount}
+          td #{prevDayMobileSessionCount}
+          td #{prevWeekMobileSessionCount}
+        tr
+          td Sessions (Desktop)
+          td #{activeDesktopSessionCount}
+          td #{prevDayDesktopSessionCount}
+          td #{prevWeekDesktopSessionCount}
     table
       thead
         tr
