--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -77,7 +77,7 @@ block dashboardContent
         tr
           td 5 minutes
           td #{durationDayHistogram.under_5_minutes}
-          td #{durationWeekHistogram.under_1_minute}
+          td #{durationWeekHistogram.under_5_minute}
         tr
           td 10 minutes
           td #{durationDayHistogram.under_10_minutes}
@@ -173,6 +173,73 @@ block dashboardContent
           td Over 10
           td #{occupantsDayHistogram.over_10}
           td #{occupantsWeekHistogram.over_10}
+
+    table
+      thead
+        th Max 1 Occupant Room Duration
+        th Last 24 hours
+        th Last 7 days
+      tbody
+        tr
+          td 5 seconds
+          td #{singleOccupantDurationDayHistogram.blips}
+          td #{singleOccupantDurationWeekHistogram.blips}
+        tr
+          td 30 seconds
+          td #{singleOccupantDurationDayHistogram.under_30_seconds}
+          td #{singleOccupantDurationWeekHistogram.under_30_seconds}
+        tr
+          td 1 minute 
+          td #{singleOccupantDurationDayHistogram.under_1_minute}
+          td #{singleOccupantDurationWeekHistogram.under_1_minute}
+        tr
+          td 5 minutes
+          td #{singleOccupantDurationDayHistogram.under_5_minutes}
+          td #{singleOccupantDurationWeekHistogram.under_1_minute}
+        tr
+          td 10 minutes
+          td #{singleOccupantDurationDayHistogram.under_10_minutes}
+          td #{singleOccupantDurationWeekHistogram.under_10_minutes}
+        tr
+          td 20 minutes
+          td #{singleOccupantDurationDayHistogram.under_20_minutes}
+          td #{singleOccupantDurationWeekHistogram.under_20_minutes}
+        tr
+          td 30 minutes
+          td #{singleOccupantDurationDayHistogram.under_30_minutes}
+          td #{singleOccupantDurationWeekHistogram.under_30_minutes}
+        tr
+          td 45 minutes
+          td #{singleOccupantDurationDayHistogram.under_45_minutes}
+          td #{singleOccupantDurationWeekHistogram.under_45_minutes}
+        tr
+          td 1 hour
+          td #{singleOccupantDurationDayHistogram.under_1_hour}
+          td #{singleOccupantDurationWeekHistogram.under_1_hour}
+        tr
+          td 2 hours
+          td #{singleOccupantDurationDayHistogram.under_2_hours}
+          td #{singleOccupantDurationWeekHistogram.under_2_hours}
+        tr
+          td 4 hours
+          td #{singleOccupantDurationDayHistogram.under_4_hours}
+          td #{singleOccupantDurationWeekHistogram.under_4_hours}
+        tr
+          td 8 hours
+          td #{singleOccupantDurationDayHistogram.under_8_hours}
+          td #{singleOccupantDurationWeekHistogram.under_8_hours}
+        tr
+          td 12 hours
+          td #{singleOccupantDurationDayHistogram.under_12_hours}
+          td #{singleOccupantDurationWeekHistogram.under_12_hours}
+        tr
+          td 1 day
+          td #{singleOccupantDurationDayHistogram.under_1_day}
+          td #{singleOccupantDurationWeekHistogram.under_1_day}
+        tr
+          td Over 1 day
+          td #{singleOccupantDurationDayHistogram.over_1_day}
+          td #{singleOccupantDurationWeekHistogram.over_1_day}
 
 
   section
