--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -77,7 +77,7 @@ block dashboardContent
         tr
           td 5 minutes
           td #{durationDayHistogram.under_5_minutes}
-          td #{durationWeekHistogram.under_5_minute}
+          td #{durationWeekHistogram.under_5_minutes}
         tr
           td 10 minutes
           td #{durationDayHistogram.under_10_minutes}
@@ -195,7 +195,7 @@ block dashboardContent
         tr
           td 5 minutes
           td #{singleOccupantDurationDayHistogram.under_5_minutes}
-          td #{singleOccupantDurationWeekHistogram.under_1_minute}
+          td #{singleOccupantDurationWeekHistogram.under_5_minutes}
         tr
           td 10 minutes
           td #{singleOccupantDurationDayHistogram.under_10_minutes}
