Break dashboard stats into multiple pages

--- a/views/list_of_rooms.pug
+++ b/views/list_of_rooms.pug
@@ -1,247 +1,6 @@
 extends layout_dashboard
 
 block dashboardContent
-  section.content-narrower
-    table
-      thead
-        tr
-          th(colspan=2)
-          th Active
-          th Last 24 hours
-          th Last 7 days
-      tbody
-        tr
-          th Rooms
-          td Total
-          td #{activeRoomCount}
-          td #{prevDayRoomCount}
-          td #{prevWeekRoomCount}
-        tr
-          td
-          td Unique
-          td #{activeRoomCount}
-          td #{prevDayUniqueRoomCount}
-          td #{prevWeekUniqueRoomCount}
-        tr
-          th Sessions
-          td Total
-          td #{activeSessionCount}
-          td #{prevDaySessionCount}
-          td #{prevWeekSessionCount}
-        tr
-          td
-          td Mobile
-          td #{activeMobileSessionCount}
-          td #{prevDayMobileSessionCount}
-          td #{prevWeekMobileSessionCount}
-        tr
-          td
-          td Web
-          td #{activeDesktopSessionCount}
-          td #{prevDayDesktopSessionCount}
-          td #{prevWeekDesktopSessionCount}
-    table
-      thead
-        tr
-          th Workers
-          th Queue Size
-          th Queue Clock
-      tbody
-        tr
-          td Events
-          td #{eventQueue}
-          td #{eventClock}
-        tr
-          td Room Reports
-          td #{roomReportQueue}
-          td #{roomReportClock}
-
-    table
-      thead
-        th Max Room Duration
-        th Last 24 hours
-        th Last 7 days
-      tbody
-        tr
-          td 5 seconds
-          td #{durationDayHistogram.blips}
-          td #{durationWeekHistogram.blips}
-        tr
-          td 30 seconds
-          td #{durationDayHistogram.under_30_seconds}
-          td #{durationWeekHistogram.under_30_seconds}
-        tr
-          td 1 minute 
-          td #{durationDayHistogram.under_1_minute}
-          td #{durationWeekHistogram.under_1_minute}
-        tr
-          td 5 minutes
-          td #{durationDayHistogram.under_5_minutes}
-          td #{durationWeekHistogram.under_5_minutes}
-        tr
-          td 10 minutes
-          td #{durationDayHistogram.under_10_minutes}
-          td #{durationWeekHistogram.under_10_minutes}
-        tr
-          td 20 minutes
-          td #{durationDayHistogram.under_20_minutes}
-          td #{durationWeekHistogram.under_20_minutes}
-        tr
-          td 30 minutes
-          td #{durationDayHistogram.under_30_minutes}
-          td #{durationWeekHistogram.under_30_minutes}
-        tr
-          td 45 minutes
-          td #{durationDayHistogram.under_45_minutes}
-          td #{durationWeekHistogram.under_45_minutes}
-        tr
-          td 1 hour
-          td #{durationDayHistogram.under_1_hour}
-          td #{durationWeekHistogram.under_1_hour}
-        tr
-          td 2 hours
-          td #{durationDayHistogram.under_2_hours}
-          td #{durationWeekHistogram.under_2_hours}
-        tr
-          td 4 hours
-          td #{durationDayHistogram.under_4_hours}
-          td #{durationWeekHistogram.under_4_hours}
-        tr
-          td 8 hours
-          td #{durationDayHistogram.under_8_hours}
-          td #{durationWeekHistogram.under_8_hours}
-        tr
-          td 12 hours
-          td #{durationDayHistogram.under_12_hours}
-          td #{durationWeekHistogram.under_12_hours}
-        tr
-          td 1 day
-          td #{durationDayHistogram.under_1_day}
-          td #{durationWeekHistogram.under_1_day}
-        tr
-          td Over 1 day
-          td #{durationDayHistogram.over_1_day}
-          td #{durationWeekHistogram.over_1_day}
-
-    table
-      thead
-        th Concurrent Room Occupants
-        th Last 24 hours
-        th Last 7 days
-      tbody
-        tr
-          td 1
-          td #{occupantsDayHistogram.equal_1}
-          td #{occupantsWeekHistogram.equal_1}
-        tr
-          td 2
-          td #{occupantsDayHistogram.equal_2}
-          td #{occupantsWeekHistogram.equal_2}
-        tr
-          td 3
-          td #{occupantsDayHistogram.equal_3}
-          td #{occupantsWeekHistogram.equal_3}
-        tr
-          td 4
-          td #{occupantsDayHistogram.equal_4}
-          td #{occupantsWeekHistogram.equal_4}
-        tr
-          td 5
-          td #{occupantsDayHistogram.equal_5}
-          td #{occupantsWeekHistogram.equal_5}
-        tr
-          td 6
-          td #{occupantsDayHistogram.equal_6}
-          td #{occupantsWeekHistogram.equal_6}
-        tr
-          td 7
-          td #{occupantsDayHistogram.equal_7}
-          td #{occupantsWeekHistogram.equal_7}
-        tr
-          td 8
-          td #{occupantsDayHistogram.equal_8}
-          td #{occupantsWeekHistogram.equal_8}
-        tr
-          td 9
-          td #{occupantsDayHistogram.equal_9}
-          td #{occupantsWeekHistogram.equal_9}
-        tr
-          td 10
-          td #{occupantsDayHistogram.equal_10}
-          td #{occupantsWeekHistogram.equal_10}
-        tr
-          td Over 10
-          td #{occupantsDayHistogram.over_10}
-          td #{occupantsWeekHistogram.over_10}
-
-    table
-      thead
-        th Max 1 Occupant Room Duration
-        th Last 24 hours
-        th Last 7 days
-      tbody
-        tr
-          td 5 seconds
-          td #{singleOccupantDurationDayHistogram.blips}
-          td #{singleOccupantDurationWeekHistogram.blips}
-        tr
-          td 30 seconds
-          td #{singleOccupantDurationDayHistogram.under_30_seconds}
-          td #{singleOccupantDurationWeekHistogram.under_30_seconds}
-        tr
-          td 1 minute 
-          td #{singleOccupantDurationDayHistogram.under_1_minute}
-          td #{singleOccupantDurationWeekHistogram.under_1_minute}
-        tr
-          td 5 minutes
-          td #{singleOccupantDurationDayHistogram.under_5_minutes}
-          td #{singleOccupantDurationWeekHistogram.under_5_minutes}
-        tr
-          td 10 minutes
-          td #{singleOccupantDurationDayHistogram.under_10_minutes}
-          td #{singleOccupantDurationWeekHistogram.under_10_minutes}
-        tr
-          td 20 minutes
-          td #{singleOccupantDurationDayHistogram.under_20_minutes}
-          td #{singleOccupantDurationWeekHistogram.under_20_minutes}
-        tr
-          td 30 minutes
-          td #{singleOccupantDurationDayHistogram.under_30_minutes}
-          td #{singleOccupantDurationWeekHistogram.under_30_minutes}
-        tr
-          td 45 minutes
-          td #{singleOccupantDurationDayHistogram.under_45_minutes}
-          td #{singleOccupantDurationWeekHistogram.under_45_minutes}
-        tr
-          td 1 hour
-          td #{singleOccupantDurationDayHistogram.under_1_hour}
-          td #{singleOccupantDurationWeekHistogram.under_1_hour}
-        tr
-          td 2 hours
-          td #{singleOccupantDurationDayHistogram.under_2_hours}
-          td #{singleOccupantDurationWeekHistogram.under_2_hours}
-        tr
-          td 4 hours
-          td #{singleOccupantDurationDayHistogram.under_4_hours}
-          td #{singleOccupantDurationWeekHistogram.under_4_hours}
-        tr
-          td 8 hours
-          td #{singleOccupantDurationDayHistogram.under_8_hours}
-          td #{singleOccupantDurationWeekHistogram.under_8_hours}
-        tr
-          td 12 hours
-          td #{singleOccupantDurationDayHistogram.under_12_hours}
-          td #{singleOccupantDurationWeekHistogram.under_12_hours}
-        tr
-          td 1 day
-          td #{singleOccupantDurationDayHistogram.under_1_day}
-          td #{singleOccupantDurationWeekHistogram.under_1_day}
-        tr
-          td Over 1 day
-          td #{singleOccupantDurationDayHistogram.over_1_day}
-          td #{singleOccupantDurationWeekHistogram.over_1_day}
-
-
   section
     h1 Recent rooms
     table
@@ -257,7 +16,7 @@ block dashboardContent
           td #{val.created_at}
           td #{val.duration}
     div
-      h3 Pages
+      // h3 Pages
       //- each page, index in pages
       //-   span
       //-     a(href='dashboard?limit=25&page=' + (index + 1)) #{index + 1}
