--- a/views/single_room.pug
+++ b/views/single_room.pug
@@ -48,7 +48,8 @@ block dashboardContent
               td #{occupant.count}
               td #{occupant.duration}
         else
-          tr td(colspan=4) No occupants
+          tr
+            td(colspan=4) No occupants
 
     h3 Talk Time 
     table
