Duration/occupant histogram drilldowns

--- a/views/system_stats.pug
+++ b/views/system_stats.pug
@@ -4,7 +4,9 @@ block dashboardContent
   section
     ul
       li
-        a(href='/dashboard/histograms') Room Stats
+        a(href='/dashboard/histograms/duration') Room Duration Stats
+      li
+        a(href='/dashboard/histograms/occupants') Room Occupants Stats
       li
         a(href='/dashboard/rooms') Recent Rooms
 
