Distinguish between new iOS app and legacy

--- a/views/system_stats.pug
+++ b/views/system_stats.pug
@@ -45,9 +45,16 @@ block dashboardContent
         tr
           td
           td Web
-          td #{activeDesktopSessionCount}
-          td #{prevDayDesktopSessionCount}
-          td #{prevWeekDesktopSessionCount}
+          td #{activeWebSessionCount}
+          td #{prevDayWebSessionCount}
+          td #{prevWeekWebSessionCount}
+        tr
+          td
+          td Legacy 
+          td #{activeLegacySessionCount}
+          td #{prevDayLegacySessionCount}
+          td #{prevWeekLegacySessionCount}
+
 
     table
       thead
